# FlaskPythonZTA

./: .gitignore  .gitmodules  LICENSE  README.md  SETUP_VPC.md  SETUP_VPC_OpenStack.md  StartServers.bat  generateCerts.bat  initVenv.bat  pyproject.toml  requirements.txt
src/client/: TrustDataBuilder.py  ZTRequests.py
src/clientLib/: Client.py  ClientAPIConfig.py  TestClient.py  TrustDataBuilder.py  ZTRequests.py
src/edgeNode/: EdgeNode.py  EdgeNodeConfig.py  EdgeNodeExceptions.py  RequestType.py  TrustExceptions.py
src/edgeNode/templates/: loginPage.html
src/testing/: Trying.py
src/trustEngine/: TokenHandler.py  TrustEngine.py  TrustEngineExceptions.py  UserDataHandler.py  enforcerPolicy.csv
testBackendServer/: TestServer.py
testClient/: TestServer.py
