[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ZeroTConnector"
version = "0.0.1"
authors = [
  { name="Collin Kees", email="keesc@wwu.edu" },
]
description = "A package that enables communications with the ZTN edge nodes."
readme = "README.md"
requires-python = ">=3.10.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/orgs/ZeroTrustNetworkWWU"
Issues = "https://github.com/ZeroTrustNetworkWWU/FlaskPythonZTA/issues"